<resources>
    <string name="app_name">Fair List</string>
    <string name="enter_you_account">Entre com a sua conta</string>
    <string name="email">Email*</string>
    <string name="password">Senha*</string>
    <string name="forgot_pass">Esqueceu sua senha?</string>
    <string name="btn_login">Login</string>
    <string name="dont_have_account">Não possui conta?</string>
    <string name="register_now">Cadastrar Agora</string>
    <string name="name">Nome*</string>
    <string name="terms_text"><u>Li e aceito os termos e condições</u></string>
    <string name="already_account">Já possui uma conta?</string>
    <string name="login">Login</string>
    <string name="email_and_password_incorrect">Dados inválidos.</string>
    <string name="invalid_fields">Email ou senha invalido.</string>
    <string name="register_product">Cadastrar Item</string>
    <string name="register_user">Usuário</string>
    <string name="title_text_user">Nome / Apelido</string>
    <string name="title_text_hint">Digite o Produto</string>
    <string name="desc_text_hint">Digite a Marca </string>
    <string name="qtd_text_hint">Digite a Quantidade </string>

    <string name="low">Baixa</string>
    <string name="medium">Média</string>
    <string name="high">Alta</string>
    <string name="save">Salvar</string>
    <string name="title_empty">Campo não pode ser Vazio.</string>
    <string name="delete">Excluir</string>
    <string name="empty_list">Nenhum item encontrado.</string>
    <string name="update">Editar</string>
    <string name="create_you_account">Crie a sua conta</string>
    <string name="edit">Editar</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item">Itens Cadastrados</string>
    <string name="bd_user">BD_FairList</string>
    <string name="titleDialog">Usuário</string>
    <string name="cancel">Cancelar</string>

</resources>