<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/register_user"
        android:textSize="@dimen/large_title"
        android:textStyle="bold"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_dialog_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:hint="@string/title_text_user"
        android:inputType="textCapWords"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_user_salvar"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_user_cancel"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white"
        android:text="@string/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>