<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#68E3F2FD"
    tools:context=".view.SignInActivity">

  <ImageView
      android:id="@+id/img_wave"
      android:src="@drawable/ic_wave"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:scaleType="centerCrop"
      android:rotation="210"
      android:translationX="36dp"
      android:translationY="-80dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <ImageView
      android:id="@+id/img_wave2"
      android:src="@drawable/ic_wave2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:scaleType="centerCrop"
      android:rotation="210"
      android:translationX="28dp"
      android:translationY="-60dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

  <ImageView
      android:id="@+id/login_img_logo"
      android:src="@drawable/ic_compras"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="150dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <androidx.cardview.widget.CardView
      android:id="@+id/container_cardVIew"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginTop="10dp"
      app:cardCornerRadius="6dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/login_img_logo">

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/login_img_logo"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="4dp"
          android:fontFamily="@font/damion"
          android:textSize="@dimen/large_title"
          android:textColor="@android:color/black"
          android:text="@string/app_name"
          android:textAlignment="center" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="16dp"
          android:layout_gravity="center"
          android:fontFamily="@font/carter_one"
          android:textSize="@dimen/normal_title"
          android:textColor="@android:color/black"
          android:text="@string/enter_you_account"
          android:textAlignment="center" />

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_name"
            android:inputType="textCapWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DCDCDC"
            android:drawableEnd="@drawable/ic_baseline_person_24"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DCDCDC"
            android:drawableEnd="@drawable/ic_baseline_email_24"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="2dp"
          android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_edt_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#DCDCDC"
            android:drawableEnd="@drawable/ic_baseline_lock_24"/>

      </com.google.android.material.textfield.TextInputLayout>

      <CheckBox
          android:text="@string/terms_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="8dp"
          android:textColor="@android:color/darker_gray"
          android:layout_gravity="start"/>
      
      <Button
          android:id="@+id/register_btn"
          android:text="@string/register_now"
          android:fontFamily="@font/carter_one"
          android:layout_margin="32dp"
          android:layout_width="match_parent"
          android:textColor="@android:color/white"
          android:background="@drawable/button_primary"
          android:layout_height="50dp"/>
    </LinearLayout>

  </androidx.cardview.widget.CardView>

  <TextView
      android:id="@+id/login_txt_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/carter_one"
      android:textSize="@dimen/normal_text"
      android:text="@string/already_account"
      android:textStyle="bold"
      app:layout_constraintHorizontal_bias="0.8"
      app:layout_constraintEnd_toStartOf="@+id/signUp_txt_click"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/container_cardVIew" />

  <TextView
      android:id="@+id/signUp_txt_click"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="68dp"
      android:fontFamily="@font/carter_one"
      android:text="@string/login"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/normal_text"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/login_txt_text" />
</androidx.constraintlayout.widget.ConstraintLayout>